# bgj2-nokie_rae

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/scenes/: level1.glb
src/: main.rs
